--- a/Client/tailwind/Output.css
+++ b/Client/tailwind/Output.css
@@ -558,32 +558,20 @@ video {
   position: fixed;
 }
 
-.left-0 {
-  left: 0px;
+.bottom-0 {
+  bottom: 0px;
 }
 
-.right-10 {
-  right: 2.5rem;
+.left-0 {
+  left: 0px;
 }
 
 .top-0 {
   top: 0px;
 }
 
-.top-10 {
-  top: 2.5rem;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
 .z-50 {
   z-index: 50;
-}
-
-.mb-12 {
-  margin-bottom: 3rem;
 }
 
 .mb-8 {
@@ -594,36 +582,60 @@ video {
   margin-left: 250px;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .flex {
   display: flex;
 }
 
-.h-2 {
-  height: 0.5rem;
+.grid {
+  display: grid;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
-.h-\[screen\] {
-  height: screen;
-}
-
-.h-\[40PX\] {
-  height: 40PX;
-}
-
-.h-\[40px\] {
-  height: 40px;
+.h-6 {
+  height: 1.5rem;
 }
 
 .h-\[70px\] {
   height: 70px;
 }
 
-.w-2 {
-  width: 0.5rem;
+.h-screen {
+  height: 100vh;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[300px\] {
+  height: 300px;
+}
+
+.h-\[30px\] {
+  height: 30px;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-\[250px\] {
@@ -634,30 +646,36 @@ video {
   width: 100%;
 }
 
-.w-\[150px\] {
-  width: 150px;
+.w-\[\] {
+  width: ;
 }
 
-.w-\[100px\] {
-  width: 100px;
+.w-\[600px\] {
+  width: 600px;
 }
 
-.w-\[80px\] {
-  width: 80px;
+.w-\[500px\] {
+  width: 500px;
 }
 
-.-translate-x-full {
-  --tw-translate-x: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.w-\[550px\] {
+  width: 550px;
 }
 
-.translate-x-0 {
-  --tw-translate-x: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.w-\[50px\] {
+  width: 50px;
 }
 
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.w-\[10em\] {
+  width: 10em;
+}
+
+.w-\[20em\] {
+  width: 20em;
+}
+
+.w-\[30em\] {
+  width: 30em;
 }
 
 .cursor-pointer {
@@ -668,20 +686,20 @@ video {
   resize: both;
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
 
-.items-start {
-  align-items: flex-start;
-}
-
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-center {
@@ -708,8 +726,8 @@ video {
   gap: 0.75rem;
 }
 
-.overflow-y-scroll {
-  overflow-y: scroll;
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .rounded-full {
@@ -720,6 +738,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -728,13 +750,14 @@ video {
   border-inline-start-width: 1px;
 }
 
-.border-e {
-  border-inline-end-width: 1px;
+.border-green-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(34 197 94 / var(--tw-border-opacity));
 }
 
-.bg-green-500 {
+.bg-greenBlue {
   --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+  background-color: rgb(2 103 193 / var(--tw-bg-opacity));
 }
 
 .bg-slate-200\/20 {
@@ -745,29 +768,35 @@ video {
   background-color: rgb(226 232 240 / 0.05);
 }
 
-.bg-greenBlue {
+.bg-frenchBlue {
   --tw-bg-opacity: 1;
-  background-color: rgb(35 100 170 / var(--tw-bg-opacity));
+  background-color: rgb(0 117 196 / var(--tw-bg-opacity));
 }
 
-.bg-pictionBlue {
+.bg-gamboge {
   --tw-bg-opacity: 1;
-  background-color: rgb(61 165 217 / var(--tw-bg-opacity));
+  background-color: rgb(239 160 11 / var(--tw-bg-opacity));
 }
 
-.bg-verdigris {
+.bg-red-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(115 191 184 / var(--tw-bg-opacity));
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
-.bg-mikadoYellow {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 198 1 / var(--tw-bg-opacity));
+.bg-\[\] {
+  background-color: ;
 }
 
-.bg-pumpkin {
-  --tw-bg-opacity: 1;
-  background-color: rgb(234 115 23 / var(--tw-bg-opacity));
+.bg-frenchBlue\/20 {
+  background-color: rgb(0 117 196 / 0.2);
+}
+
+.bg-gamboge\/20 {
+  background-color: rgb(239 160 11 / 0.2);
+}
+
+.bg-gamboge\/10 {
+  background-color: rgb(239 160 11 / 0.1);
 }
 
 .bg-black {
@@ -775,17 +804,83 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-slate-200 {
+.bg-SRO {
   --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+  background-color: rgb(214 81 8 / var(--tw-bg-opacity));
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.bg-\[url\(\)\] {
+  background-image: url();
+}
+
+.bg-\[url\(\'\'\)\] {
+  background-image: url('');
+}
+
+.bg-\[url\(\'\/bg1\.jpg\'\)\] {
+  background-image: url('/bg1.jpg');
+}
+
+.bg-\[url\(\'\/bg2\.jpg\'\)\] {
+  background-image: url('/bg2.jpg');
+}
+
+.from-frenchBlue {
+  --tw-gradient-from: #0075C4 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 117 196 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-greenBlue {
+  --tw-gradient-to: #0267C1 var(--tw-gradient-to-position);
+}
+
+.to-red-400 {
+  --tw-gradient-to: #f87171 var(--tw-gradient-to-position);
+}
+
+.to-transparent {
+  --tw-gradient-to: transparent var(--tw-gradient-to-position);
+}
+
+.to-frenchBlue\/20 {
+  --tw-gradient-to: rgb(0 117 196 / 0.2) var(--tw-gradient-to-position);
+}
+
+.to-frenchBlue\/5 {
+  --tw-gradient-to: rgb(0 117 196 / 0.05) var(--tw-gradient-to-position);
+}
+
+.to-frenchBlue\/30 {
+  --tw-gradient-to: rgb(0 117 196 / 0.3) var(--tw-gradient-to-position);
+}
+
+.to-frenchBlue\/90 {
+  --tw-gradient-to: rgb(0 117 196 / 0.9) var(--tw-gradient-to-position);
+}
+
+.to-frenchBlue\/60 {
+  --tw-gradient-to: rgb(0 117 196 / 0.6) var(--tw-gradient-to-position);
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
 }
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-4 {
-  padding: 1rem;
 }
 
 .p-6 {
@@ -796,9 +891,45 @@ video {
   padding: 2rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-lg {
@@ -816,13 +947,27 @@ video {
   line-height: 1rem;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-black {
   font-weight: 900;
 }
 
-.text-blue-600 {
+.font-bold {
+  font-weight: 700;
+}
+
+.text-slate-200 {
   --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
+  color: rgb(226 232 240 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -835,17 +980,46 @@ video {
   color: rgb(148 163 184 / var(--tw-text-opacity));
 }
 
-.text-slate-200 {
+.text-slate-100 {
   --tw-text-opacity: 1;
-  color: rgb(226 232 240 / var(--tw-text-opacity));
+  color: rgb(241 245 249 / var(--tw-text-opacity));
 }
 
-.opacity-0 {
-  opacity: 0;
+.text-slate-300 {
+  --tw-text-opacity: 1;
+  color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
-.opacity-100 {
-  opacity: 1;
+.text-slate-200\/20 {
+  color: rgb(226 232 240 / 0.2);
+}
+
+.text-slate-200\/5 {
+  color: rgb(226 232 240 / 0.05);
+}
+
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.bg-blend-darken {
+  background-blend-mode: darken;
 }
 
 .backdrop-blur-md {
@@ -862,18 +1036,8 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .duration-300 {
   transition-duration: 300ms;
-}
-
-.duration-500 {
-  transition-duration: 500ms;
 }
 
 .ease-in-out {
@@ -882,4 +1046,26 @@ video {
 
 .hover\:bg-slate-200\/5:hover {
   background-color: rgb(226 232 240 / 0.05);
+}
+
+@media (min-width: 768px) {
+  .md\:ml-\[250px\] {
+    margin-left: 250px;
+  }
+
+  .md\:w-\[550px\] {
+    width: 550px;
+  }
+
+  .md\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:p-8 {
+    padding: 2rem;
+  }
 }
