--- a/Client/tailwind/Output.css
+++ b/Client/tailwind/Output.css
@@ -562,14 +562,6 @@ video {
   position: fixed;
 }
 
-.absolute {
-  position: absolute;
-}
-
-.relative {
-  position: relative;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
@@ -580,14 +572,6 @@ video {
 
 .top-0 {
   top: 0px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.top-1\/2 {
-  top: 50%;
 }
 
 .z-50 {
@@ -604,11 +588,6 @@ video {
 
 .col-span-2 {
   grid-column: span 2 / span 2;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .mb-6 {
@@ -659,6 +638,10 @@ video {
   height: 3rem;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -671,18 +654,6 @@ video {
   height: 100vh;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
 .w-6 {
   width: 1.5rem;
 }
@@ -693,6 +664,10 @@ video {
 
 .w-\[20em\] {
   width: 20em;
+}
+
+.w-\[22em\] {
+  width: 22em;
 }
 
 .w-\[250px\] {
@@ -713,47 +688,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[30em\] {
-  width: 30em;
-}
-
-.w-\[10em\] {
-  width: 10em;
-}
-
-.w-\[em\] {
-  width: em;
-}
-
-.w-\[5em\] {
-  width: 5em;
-}
-
-.w-\[22em\] {
-  width: 22em;
-}
-
-.w-\[21em\] {
-  width: 21em;
-}
-
-.min-w-full {
-  min-width: 100%;
-}
-
-.max-w-\[350px\] {
-  max-width: 350px;
-}
-
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
@@ -812,10 +746,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-}
-
-.overflow-hidden {
-  overflow: hidden;
 }
 
 .rounded-full {
@@ -899,9 +829,13 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-800 {
+.bg-red-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
+.bg-transparent {
+  background-color: transparent;
 }
 
 .bg-\[url\(\'\/bg1\.jpg\'\)\] {
@@ -1141,22 +1075,12 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-transform {
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .duration-150 {
   transition-duration: 150ms;
 }
 
 .duration-300 {
   transition-duration: 300ms;
-}
-
-.duration-500 {
-  transition-duration: 500ms;
 }
 
 .ease-in-out {
@@ -1197,10 +1121,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:w-\[40em\] {
-    width: 40em;
-  }
-
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -1224,10 +1144,6 @@ video {
     margin-top: 0px;
   }
 
-  .md\:w-\[40em\] {
-    width: 40em;
-  }
-
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1242,11 +1158,5 @@ video {
 
   .md\:p-8 {
     padding: 2rem;
-  }
-}
-
-@media (min-width: 1024px) {
-  .lg\:w-\[30em\] {
-    width: 30em;
   }
 }
