ready to add in app authentication and linking the full app

--- a/Client/tailwind/Output.css
+++ b/Client/tailwind/Output.css
@@ -1037,6 +1037,10 @@ video {
   background-image: url('/bg2.jpg');
 }
 
+.bg-\[url\(\'\/bg2\.png\'\)\] {
+  background-image: url('/bg2.png');
+}
+
 .bg-cover {
   background-size: cover;
 }
