--- a/Server/Views/index.html
+++ b/Server/Views/index.html
@@ -14,8 +14,8 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nexus</title>
-    <script type="module" crossorigin src="/assets/index-tkKWer_s.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-8iuox20z.css">
+    <script type="module" crossorigin src="/assets/index-D0Hm6P7t.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index-DL-sRKvT.css">
   </head>
   <body>
     <div id="root"></div>
