Included the footer

--- a/Client/tailwind/Output.css
+++ b/Client/tailwind/Output.css
@@ -670,10 +670,6 @@ video {
   margin-top: 2rem;
 }
 
-.mt-\[50\%\] {
-  margin-top: 50%;
-}
-
 .mt-\[40\%\] {
   margin-top: 40%;
 }
@@ -1218,6 +1214,16 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .underline {
